# LexXAxiomPackage

./: DEPLOYMENT.md  PRINCIPLES.md  README.md  STRATEGY.md
Athena/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
Athena/Athena.egg-info/: PKG-INFO  SOURCES.txt
AxiomHash/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
AxiomHash/AxiomHash.egg-info/: PKG-INFO  SOURCES.txt
AxiomHash/src/: axiomhash_cli.py
AxiomHash/src/axiomhash/: __init__.py
AxiomHash/tests/: test_hash.py
AxiomSSI/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
AxiomSSI/AxiomSSI.egg-info/: PKG-INFO  SOURCES.txt
AxiomSSI/src/axiomssi/: cli.py  crypto.py  keystore.py
AxiomSSI/tests/: test_keys.py  test_sign_verify.py
GeminiPortable/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
GeminiPortable/src/gemini_portable/: cli.py  memory4d.py
GeminiPortable/src/gemini_portable/backends/: local_stub.py
GeminiPortable/src/gemini_portable_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
GeminiPortable/tests/: test_memory4d.py
RuntimeZero/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh
Shared/: .pre-commit-config.yaml
Shared/tools/: integrity_attest.py
Tesseract/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
Tesseract/Tesseract.egg-info/: PKG-INFO  SOURCES.txt
VALIDATION/: integrity_attestation.txt
