[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomhash-cli"
version = "2.0.0"
authors = [{ name = "Alexis Adams", email = "alexis.adams @axiomhive.local" }]
description = "A deterministic, streaming file hasher with Merkle root support."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
fast = ["blake3==0.3.8"]
dev = ["pytest==7.4.3", "pytest-cov==4.1.0", "ruff==0.1.6", "mypy==1.7.0", "blake3==0.3.3"]

[project.scripts]
axiom-hash = "axiomhash_cli:main"

[tool.mypy]
strict = true
ignore_missing_imports = true
package_data_package_dir = "."