[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomssi-cli"
version = "1.0.0"
authors = [{ name = "Alexis Adams", email = "alexis.adams @axiomhive.local" }]
description = "A local-first, sovereign self-identity tool for key management and signing."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography==44.0.1",
    "click==8.1.7"
]

[project.optional-dependencies]
dev = ["pytest==7.4.3", "pytest-cov==4.1.0", "ruff==0.1.6", "mypy==1.7.0", "types-click==7.1.7"]

[project.scripts]
axiom = "axiomssi.cli:main"

[tool.mypy]
strict = true